Update a lot of things

--- a/public/contato.html
+++ b/public/contato.html
@@ -148,7 +148,7 @@
 
 	</div>
 
-	<nav class="Nav">
+	<nav class="Nav Nav--header Header-nav">
 
 		<div class="Nav-background"></div>
 
@@ -168,13 +168,13 @@
 
 			<li class="NavItem">
 
-				<a href="#"><span>20 Anos</span></a>
+				<a href="/"><span>20 Anos</span></a>
 
 			</li>
 
 			<li class="NavItem">
 
-				<a href="#"><span>O evento</span></a>
+				<a href="/"><span>O evento</span></a>
 
 			</li>
 
@@ -188,12 +188,6 @@
 		</ul>
 
 	</nav>
-
-	<!--<div class="Header-action">-->
-<!---->
-		<!---->
-<!---->
-	<!--</div>-->
 
 </header>
 
