--- a/public/index.html
+++ b/public/index.html
@@ -140,13 +140,13 @@
 		<div class="Hero-background"></div>
 		<div class="Hero-inner">
 
-			<img src="dist/img/logo/Logo.png" alt="Logo TNV"/>
+			<img src="dist/img/logo/TNVLogoTyped.png" alt="Logo TNV"/>
 
 		</div>
 
 	</div>
 
-	<nav class="Nav">
+	<nav class="Nav Nav--header Header-nav">
 
 		<div class="Nav-background"></div>
 
@@ -166,13 +166,13 @@
 
 			<li class="NavItem">
 
-				<a href="#"><span>20 Anos</span></a>
+				<a href="/"><span>20 Anos</span></a>
 
 			</li>
 
 			<li class="NavItem">
 
-				<a href="#"><span>O evento</span></a>
+				<a href="/"><span>O evento</span></a>
 
 			</li>
 
@@ -181,7 +181,6 @@
 				<a href="contato"><span>Contato</span></a>
 
 			</li>
-
 
 		</ul>
 
@@ -257,6 +256,46 @@
 	</div>
 
 </section>
+
+<footer class="Footer">
+
+	<div class="Footer-inner container">
+
+		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
+
+		<p>Pátio da FEPASA, Av. Reginalda Leão, S/N - Palmital, SP</p>
+		<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a></p>
+		<p>Braz <a href="tel:+5518991076902">18 9 9107 6902</a></p>
+		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
+
+		<div class="Footer-social">
+
+			<a href="https://www.messenger.com/t/tonovaso.palmital/" class="Footer-socialIcon">
+
+				<span class="icon-facebook-messenger"></span>
+
+			</a>
+
+			<a href="https://www.facebook.com/tonovaso.palmital/" class="Footer-socialIcon">
+
+				<span class="icon-facebook"></span>
+
+			</a>
+
+			<a href="https://www.instagram.com/braztnv" class="Footer-socialIcon">
+
+				<span class="icon-instagram"></span>
+
+			</a>
+
+
+		</div>
+
+		<p>TNV © 1998 - 2017</p>
+
+	</div>
+
+</footer>
 
 <script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
