--- a/public/tickets.html
+++ b/public/tickets.html
@@ -62,11 +62,125 @@
 
 </div>
 
+<aside class="Aside font-grey-700">
+
+	<div class="Aside-inner">
+
+		<div class="Aside-content">
+
+			<div class="AsideButton AsideButton--ticket">
+
+				<a href="tickets" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-ticket"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="Aside-text">
+
+				<span>24 a 28 de fevereiro de 2017<span class="heightLarge-visible">, Palmital - SP</span></span>
+
+			</div>
+
+			<div class="AsideButton AsideButton--messenger">
+
+				<a href="https://www.messenger.com/t/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook-messenger"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--facebook">
+
+				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook-squared"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--instagram">
+
+				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-instagram"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</aside>
+
+<nav class="Nav">
+
+	<div class="Nav-background"></div>
+
+	<ul class="Nav-menu">
+
+		<li class="NavItem">
+
+			<a href="/"><span>Início</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="tickets"><span>Ingressos</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="/"><span>20 Anos</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="/"><span>O evento</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="contato"><span>Contato</span></a>
+
+		</li>
+
+	</ul>
+
+</nav>
+
 <header class="TicketsHeader">
 
 	<div class="TicketsHeader-inner container">
 
-		<a href="./"><img src="dist/img/logo.png" alt=""/></a>
+		<a href="./"><img src="dist/img/logo/small/TNVLogo.png" alt=""/></a>
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
@@ -493,17 +607,13 @@
 
 		</div>
 
-		<div class="Tickets-footer">
+		<footer class="Tickets-footer">
 
-			<footer class="Footer">
+			<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a> <br/>
+				Braz <a href="tel:+5518991076902">18 9 9107 6902</a> <br/>
+				<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
-				<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a> <br/>
-					Braz <a href="tel:+5518991076902">18 9 9107 6902</a> <br/>
-					<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
-
-			</footer>
-
-		</div>
+		</footer>
 
 		<div class="TicketsCheckout Tickets-checkout">
 
