Facebook and twitter meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <title>TNV | Bloco Tô No Vaso - Palmital</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-<link rel="canonical" href="https://tonovaso.com.br/social"/>
+<link rel="canonical" href="https://tonovaso.com.br/"/>
 <meta property="og:url" content="https://tonovaso.com.br/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
