Fix: visual bug (Nav-background overlay)

--- a/public/tickets.html
+++ b/public/tickets.html
@@ -4,6 +4,16 @@
 <title>Tô No Vaso</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+<link rel="canonical" href="https://tonovaso.com.br/"/>
+<meta property="og:url" content="https://tonovaso.com.br/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Bloco TnV">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
+<meta property="fb:pages" content="440721119282308">
 <meta name="theme-color" content="#3f51b5"/>
 <script>
 	(function(d) {
@@ -138,7 +148,7 @@
 
 <nav class="Nav">
 
-	<div class="Nav-background"></div>
+	<!--<div class="Nav-background"></div>-->
 
 	<ul class="Nav-menu">
 
@@ -261,9 +271,11 @@
 
 						<div class="TicketsOption-description">
 
-							<p>O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
+							<p>
+								O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -343,9 +355,11 @@
 
 						<div class="TicketsOption-description">
 
-							<p>O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
+							<p>
+								O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -425,8 +439,10 @@
 
 						<div class="TicketsOption-description">
 
-							<p>A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+							<p>
+								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -506,8 +522,10 @@
 
 						<div class="TicketsOption-description">
 
-							<p>A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+							<p>
+								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -587,8 +605,10 @@
 
 						<div class="TicketsOption-description">
 
-							<p>Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+							<p>
+								Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
