Adicionando imagens e arquivos que não tinham ido no último commit

--- a/public/lineup.html
+++ b/public/lineup.html
@@ -57,45 +57,29 @@
 <script src="dist/js/classList.min.js"></script>
 <![endif]-->
 
-<style>
-
-
-
-</style>
-
 <body class="tk-proxima-nova">
 
-<div class="LineUp grey-100">
+<div class="Lineup">
 
-	<h2 class="font-amber-a700">Atrações</h2>
+	<div class="Lineup-background"></div>
 
-	<div class="LineUpArtist">
+	<div class="Lineup-inner">
 
-		<img src="dist/img/lineup/LineupArtist-2017--24-zoom-boxx.png" alt="24 Fev - Zoom Boox"/>
+		<div class="LineupArtist">
 
-	</div>
+			<figure class="LineupArtist-image">
 
-	<div class="LineUpArtist">
+				<img src="dist/img/artists/MC%20GUIME.png" alt=""/>
 
-		<img src="dist/img/lineup/LineupArtist-2017--25-donna-banda.png" alt="25 Fev - Donna Banda"/>
+				<figcaption>
 
-	</div>
+					<span>MC <br/>GUIMÊ</span>
 
-	<div class="LineUpArtist">
+				</figcaption>
 
-		<img src="dist/img/lineup/LineupArtist-2017--26-mc-guime.png" alt="26 Fev - MC Guimê"/>
+			</figure>
 
-	</div>
-
-	<div class="LineUpArtist">
-
-		<img src="dist/img/lineup/LineupArtist-2017--27-pagode-mc-duh.png" alt="27 Fev - MC Duh"/>
-
-	</div>
-
-	<div class="LineUpArtist">
-
-		<img src="dist/img/lineup/LineupArtist-2017--28-dj-renatinho.png" alt="28 Fev - DJ Renatinho"/>
+		</div>
 
 	</div>
 
