Normalizando páginas (atrações no index), substituindo script do typekit nos cabeçalhos (fix bug no chrome mobile), atualizando nav das páginas

--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -4,8 +4,27 @@
 <title>20 anos | Bloco Tô No Vaso - Palmital</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+<link rel="canonical" href="https://tonovaso.com.br/"/>
+<meta property="og:url" content="https://tonovaso.com.br/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Bloco TnV">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
+<meta property="fb:pages" content="440721119282308">
 <meta id="theme-color" name="theme-color" content="#eeeeee"/>
-<script src="https://use.typekit.net/jhl4ayv.js"></script>
+<script>
+	(function(d) {
+		var config = {
+					kitId: 'jhl4ayv',
+					scriptTimeout: 3000,
+					async: true
+				},
+				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+	})(document);
+</script>
 <!--<script>try{Typekit.load({ async: true });}catch(e){}</script>-->
 <script>
 
@@ -162,15 +181,15 @@
 
 			<li class="NavItem">
 
-				<a href="/"><span>20 Anos</span></a>
+				<a href="20-anos"><span>20 Anos</span></a>
 
 			</li>
 
-			<li class="NavItem">
+			<!--<li class="NavItem">-->
 
-				<a href="/"><span>O evento</span></a>
+				<!--<a href="/"><span>O evento</span></a>-->
 
-			</li>
+			<!--</li>-->
 
 			<li class="NavItem">
 
@@ -201,7 +220,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/1998.jpg" alt="Abadá TNV - 1998"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -228,7 +247,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/1999.jpg" alt="Abadá TNV - 1999"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -255,7 +274,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2000.jpg" alt="Abadá TNV - 2000"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -281,7 +300,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2001.jpg" alt="Abadá TNV - 2001"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -308,7 +327,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2002.jpg" alt="Abadá TNV - 2002"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -334,7 +353,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2003.jpg" alt="Abadá TNV - 2003"/>
 				</div>
 
 				<div class="Yearbook-secondary Yearbook--compact">
@@ -361,7 +380,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2004.jpg" alt="Abadá TNV - 2004"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -387,7 +406,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2005.jpg" alt="Abadá TNV - 2005"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -413,7 +432,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2006.jpg" alt="Abadá TNV - 2006"/>
 				</div>
 
 				<div class="Yearbook-secondary Yearbook--compact">
@@ -440,7 +459,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2007.jpg" alt="Abadá TNV - 2007"/>
 				</div>
 
 				<div class="Yearbook-secondary Yearbook--compact">
@@ -468,7 +487,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2008.jpg" alt="Abadá TNV - 2008"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -494,7 +513,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2009.jpg" alt="Abadá TNV - 2009"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -520,7 +539,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2010.jpg" alt="Abadá TNV - 2010"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -547,7 +566,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2011.jpg" alt="Abadá TNV - 2011"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -574,7 +593,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2012.jpg" alt="Abadá TNV - 2012"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -600,7 +619,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2013.jpg" alt="Abadá TNV - 2013"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -626,7 +645,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2014.jpg" alt="Abadá TNV - 2014"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -653,7 +672,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2015.jpg" alt="Abadá TNV - 2015"/>
 				</div>
 
 				<div class="Yearbook-secondary">
@@ -679,7 +698,7 @@
 			<div class="Yearbook-inner">
 
 				<div class="Yearbook-primary">
-					<img src="dist/img/tshirt.png" alt="Abadá TNV"/>
+					<img src="dist/img/uniform/2016.jpg" alt="Abadá TNV - 2016"/>
 				</div>
 
 				<div class="Yearbook-secondary">
