--- a/public/tickets.html
+++ b/public/tickets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <meta charset="UTF-8">
-<title>Tô No Vaso</title>
+<title>Ingressos | Bloco Tô No Vaso - Palmital</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <link rel="canonical" href="https://tonovaso.com.br/"/>
@@ -166,15 +166,15 @@
 
 		<li class="NavItem">
 
-			<a href="/"><span>20 Anos</span></a>
+			<a href="20-anos"><span>20 Anos</span></a>
 
 		</li>
 
-		<li class="NavItem">
+		<!--<li class="NavItem">-->
 
-			<a href="/"><span>O evento</span></a>
+			<!--<a href="/"><span>O evento</span></a>-->
 
-		</li>
+		<!--</li>-->
 
 		<li class="NavItem">
 
