Updated facebook meta tag info and images

--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -5,11 +5,11 @@
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <link rel="canonical" href="https://tonovaso.com.br/"/>
-<meta property="og:url" content="https://tonovaso.com.br/">
+<meta property="og:url" content="https://tonovaso.com.br/20-anos">
 <meta property="og:type" content="website">
-<meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
-<meta property="og:description" content="Bloco TnV">
-<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:title" content="Nossa história - 20 anos | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Acompanhe nossa jornada desde 1998 até hoje">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image2.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="800">
