--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
 <meta property="og:description" content="Bloco TnV">
-<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image1.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="800">
