--- a/public/tickets.html
+++ b/public/tickets.html
@@ -5,16 +5,16 @@
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <link rel="canonical" href="https://tonovaso.com.br/"/>
-<meta property="og:url" content="https://tonovaso.com.br/">
+<meta property="og:url" content="https://tonovaso.com.br/tickets">
 <meta property="og:type" content="website">
-<meta property="og:title" content="TNV | Bloco Tô No Vaso - Palmital">
-<meta property="og:description" content="Bloco TnV">
-<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
+<meta property="og:title" content="Ingressos | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Compre ingressos e abadás diretamente pelo nosso site">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image2.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="800">
 <meta property="fb:pages" content="440721119282308">
-<meta name="theme-color" content="#3f51b5"/>
+<meta id="theme-color" name="theme-color" content="#3f51b5"/>
 <script>
 	(function(d) {
 		var config = {
