--- a/public/lineup.html
+++ b/public/lineup.html
@@ -43,7 +43,7 @@
 				document.documentElement.classList.remove('is-loading');
 			}
 		})
-	} catch(e) {}
+	} catch(e) { }
 
 </script>
 <script src="dist/js/villa.min.js"></script>
@@ -67,17 +67,336 @@
 
 		<div class="LineupArtist">
 
-			<figure class="LineupArtist-image">
+			<div class="LineupArtistResume">
 
-				<img src="dist/img/artists/MC%20GUIME.png" alt=""/>
+				<div class="LineupArtistResume-date">
 
-				<figcaption>
+					<span>24/02</span>
 
-					<span>MC <br/>GUIMÊ</span>
+				</div>
 
-				</figcaption>
+				<div class="LineupArtistResume-artist">
 
-			</figure>
+					<span>ZOOM BOX</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/ZOOM%20BOX.png" alt=""/>
+
+					<figcaption>
+
+						<span>ZOOM <br/>BOXX</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Formado nos Estados Unidos em 2003 pelos irmãos Sidney (guitarra e vocal) e Felipe de Oliveira (teclado e vocal), o Zoom Boxx começou sua história de sucesso nos grandes eventos, festivais e clubs da costa leste americana.</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="LineupArtist">
+
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-date">
+
+					<span>25/02</span>
+
+				</div>
+
+				<div class="LineupArtistResume-artist">
+
+					<span>DONNA BANDA</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/DONA%20BANDA.png" alt=""/>
+
+					<figcaption>
+
+						<span>DONNA <br/>BANDA</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Cantar, dançar, atuar, transformar através da arte... Isso é Donna Banda!. </p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="LineupArtist LineupArtist--mcMigue is-showingMore">
+
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-date">
+
+					<span>26/02</span>
+
+				</div>
+
+				<div class="LineupArtistResume-artist">
+
+					<span>MC GUIMÊ</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/MC%20GUIME.png" alt=""/>
+
+					<figcaption>
+
+						<span>MC <br/>GUIMÊ</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="LineupArtist LineupArtist--pagodeDoNova">
+
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-date">
+
+					<span>27/02</span>
+
+				</div>
+
+				<div class="LineupArtistResume-artist">
+
+					<span>PAGODE DO NOVA + MC DUH</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/GRUPO%20NOVA%20+%20MC.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">PAGODE DO NOVA</span> <br/>+ MC DUH</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="LineupArtist LineupArtist--djRenatinho">
+
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-date">
+
+					<span>28/02</span>
+
+				</div>
+
+				<div class="LineupArtistResume-artist">
+
+					<span>DJ RENATINHO LIVE DRUMS</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/DJ%20RENATINHO.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">DJ RENATINHO</span> <br/>Live Drums</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+
+				</div>
+
+			</div>
 
 		</div>
 
@@ -87,6 +406,17 @@
 
 <script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
+
+<script>
+
+	var lineupArtistElements = document.querySelectorAll('.LineupArtist');
+
+	var lineupArtists = [];
+
+	for (var i = lineupArtistElements.length; i--; )
+		lineupArtists.push(new LineupArtist(lineupArtistElements[i]));
+
+</script>
 
 </body>
 
