Adição de fotos do lineup e atualização do index e tickets

--- a/public/lineup.html
+++ b/public/lineup.html
@@ -266,6 +266,73 @@
 
 		</div>
 
+		<div class="LineupArtist LineupArtist--eletronicSunsect">
+
+			<div class="LineupArtistResume">
+
+				<div class="LineupArtistResume-date">
+
+					<span>27/02</span>
+
+				</div>
+
+				<div class="LineupArtistResume-artist">
+
+					<span>SEGUNDA ELETRONIC SUNSET</span>
+
+				</div>
+
+				<div class="LineupArtistResume-misc">
+
+					<ul>
+
+						<li>
+
+							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+
+						</li>
+
+						<li>
+
+							<button class="Button Button--lineupShowMore">
+
+								<span class="icon-keyboard_arrow_down"></span>
+								<span class="icon-keyboard_arrow_up"></span>
+
+							</button>
+
+						</li>
+
+					</ul>
+
+				</div>
+
+			</div>
+
+			<div class="LineupArtist-inner">
+
+				<figure class="LineupArtist-figure">
+
+					<img src="dist/img/artists/DJ%20RENATINHO.png" alt=""/>
+
+					<figcaption>
+
+						<span><span class="nowrap">DJ RENATINHO</span> <br/>Live Drums</span>
+
+					</figcaption>
+
+				</figure>
+
+				<div class="LineupArtist-description">
+
+					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
 		<div class="LineupArtist LineupArtist--pagodeDoNova">
 
 			<div class="LineupArtistResume">
