--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
 
 			<div class="AsideButton AsideButton--facebook">
 
-				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.facebook.com/events/150763765394621/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -135,7 +135,7 @@
 
 			<div class="AsideButton AsideButton--instagram">
 
-				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.instagram.com/blocotnv/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -429,6 +429,8 @@
 
 		</div>
 
+
+
 		<div class="LineupArtist LineupArtist--pagodeDoNova">
 
 			<div class="LineupArtistResume">
@@ -488,7 +490,7 @@
 
 				<div class="LineupArtist-description">
 
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+					<!--<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>-->
 
 				</div>
 
@@ -555,7 +557,7 @@
 
 				<div class="LineupArtist-description">
 
-					<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>
+					<!--<p>Atualmente é considerado um dos maiores nomes do funk ostentação. MC Guimê tem como bordão a frase "Vai segurando!", fala no começo de suas músicas.</p>-->
 
 				</div>
 
@@ -583,7 +585,7 @@
 
 				<p>Para comemorar duas décadas de festa, não poderíamos deixar de fazer algo especial em 2017 e para isso teremos para cada dia de festa uma temática diferente.</p>
 
-				<p>Então prepare seu chinelo, seu abadá, acesse nossa página no <a href="https://www.facebook.com/tonovaso.palmital/">Facebook</a> e fique por dentro de todas as novidades que irão surgir até o começo do carnaval!</p>
+				<p>Então prepare seu chinelo, seu abadá, acesse nossa página no <a href="https://www.facebook.com/events/150763765394621/">Facebook</a> e fique por dentro de todas as novidades que irão surgir até o começo do carnaval!</p>
 
 			</div>
 
@@ -649,9 +651,9 @@
 
 		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
 
-		<p>Pátio da FEPASA, Av. Reginalda Leão, S/N - Palmital, SP</p>
-		<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a></p>
-		<p>Braz <a href="tel:+5518991076902">18 9 9107 6902</a></p>
+		<p>Rua XV de Novembro, 29 - Palmital, SP</p>
+		<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a></p>
+		<p>Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a></p>
 		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
 		<div class="Footer-social">
@@ -662,13 +664,13 @@
 
 			</a>
 
-			<a href="https://www.facebook.com/tonovaso.palmital/" class="Footer-socialIcon">
+			<a href="https://www.facebook.com/events/150763765394621/" class="Footer-socialIcon">
 
 				<span class="icon-facebook"></span>
 
 			</a>
 
-			<a href="https://www.instagram.com/braztnv" class="Footer-socialIcon">
+			<a href="https://www.instagram.com/blocotnv/" class="Footer-socialIcon">
 
 				<span class="icon-instagram"></span>
 
