--- a/public/tickets.html
+++ b/public/tickets.html
@@ -114,7 +114,7 @@
 
 			<div class="AsideButton AsideButton--facebook">
 
-				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.facebook.com/events/150763765394621/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -128,7 +128,7 @@
 
 			<div class="AsideButton AsideButton--instagram">
 
-				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.instagram.com/blocotnv/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -194,7 +194,7 @@
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
-			Local: Palmital - São Paulo</p>
+			Local: Rua XV de Novembro, 29 - Palmital, SP</p>
 
 	</div>
 
@@ -242,7 +242,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q01">
+										<select class="Select-select" name="quantity" id="q01">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -292,7 +292,7 @@
 
 			</div>
 
-			<div class="TicketsOption" data-option-id="TNVPACK_F" data-price="237.60" data-description="Pacote Feminino + Abadá">
+			<div class="TicketsOption" data-option-id="TNVPACK_F" data-price="239.20" data-description="Pacote Feminino + Abadá">
 
 				<div class="TicketsOption-inner">
 
@@ -304,8 +304,8 @@
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$220,00</span>
-								<span class="TicketOption-taxFee">(+R$17,60 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$230,00</span>
+								<span class="TicketOption-taxFee">(+R$9,20 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -326,7 +326,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q02">
+										<select class="Select-select" name="quantity" id="q02">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -410,7 +410,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q03">
+										<select class="Select-select" name="quantity" id="q03">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -459,7 +459,7 @@
 
 			</div>
 
-			<div class="TicketsOption" data-option-id="TNVDIAR_F" data-price="64.80" data-description="Diária Feminina">
+			<div class="TicketsOption" data-option-id="TNVDIAR_F" data-price="72.80" data-description="Diária Feminina">
 
 				<div class="TicketsOption-inner">
 
@@ -471,8 +471,8 @@
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$60,00</span>
-								<span class="TicketOption-taxFee">(+R$4,80 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$70,00</span>
+								<span class="TicketOption-taxFee">(+R$2,80 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -493,7 +493,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q04">
+										<select class="Select-select" name="quantity" id="q04">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -576,7 +576,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q05">
+										<select class="Select-select" name="quantity" id="q05">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -629,8 +629,8 @@
 
 		<footer class="Tickets-footer">
 
-			<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a> <br/>
-				Braz <a href="tel:+5518991076902">18 9 9107 6902</a> <br/>
+			<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a> <br/>
+				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a> <br/>
 				<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
 		</footer>
