"O evento" added on nav and mouse scroll animation created and placed

--- a/public/contato.html
+++ b/public/contato.html
@@ -192,11 +192,11 @@
 
 			</li>
 
-			<!--<li class="NavItem">-->
+			<li class="NavItem">
 
-				<!--<a href="/"><span>O evento</span></a>-->
+				<a href="/#sobre"><span>O evento</span></a>
 
-			<!--</li>-->
+			</li>
 
 			<li class="NavItem">
 
