--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -185,11 +185,11 @@
 
 			</li>
 
-			<!--<li class="NavItem">-->
+			<li class="NavItem">
 
-				<!--<a href="/"><span>O evento</span></a>-->
+				<a href="/#sobre"><span>O evento</span></a>
 
-			<!--</li>-->
+			</li>
 
 			<li class="NavItem">
 
