--- a/public/tickets.html
+++ b/public/tickets.html
@@ -170,11 +170,11 @@
 
 		</li>
 
-		<!--<li class="NavItem">-->
+		<li class="NavItem">
 
-			<!--<a href="/"><span>O evento</span></a>-->
+			<a href="/#sobre"><span>O evento</span></a>
 
-		<!--</li>-->
+		</li>
 
 		<li class="NavItem">
 
