Atualização dos Tickets, agora os titulos cabem no

--- a/public/lineup.html
+++ b/public/lineup.html
@@ -87,7 +87,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
@@ -154,7 +160,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
@@ -221,7 +233,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
@@ -288,7 +306,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
@@ -355,7 +379,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
@@ -422,7 +452,13 @@
 
 						<li>
 
-							<a class="Button Button--lineupResume" href="/tickets"><span>INGRESSOS</span></a>
+							<a class="Button Button--lineupResume" href="/tickets">
+
+								<span class="icon-ticket tablet-hidden"></span>
+
+								<span class="mobile-hidden">INGRESSOS</span>
+
+							</a>
 
 						</li>
 
